# PIDX

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CMakeLists.txt  Error_List  LICENSE  LICENSE.md  Makefile  PIDX.config.h.in  PIDX_config.h.in  README.md  input.config  pidx_config.h.in  temp_file.txt
convert/: CMakeLists.txt  file_per_process_raw_to_idx.c  hdf_to_idx.c  hdf_to_idx.h  hdf_to_idx_fabrizio.c  pnetcdf_to_idx.c  sph_to_idx.c
develop/: CMakeLists.txt
examples/: CMakeLists.txt  pidx_examples_utils.h
examples/ROI/: PIDX-adaptive-roi.c  PIDX-reduced-resolution-read.c  PIDX-reduced-resolution-write.c  PIDX-roi.c
examples/basic-io/: gradient_particle_write.c  idx_read.c  idx_read_reduced_resolution.c  idx_write.c  idx_write_compressed.c  idx_write_multibuffer.c  idx_write_partitioned.c  idx_write_reduced_resolution.c  non_uniform_particle_write.c  particle_read.c  particle_write.c  raw_write.c
examples/checkpoint-restart/: PIDX-s3d-checkpoint.c  PIDX-s3d-restart.c  PIDX-uintah-checkpoint.c
examples/compression/: PIDX-read-compressed.c  PIDX-write-compressed.c  PIDX_read_compressed.c  PIDX_write_compressed.c  idx_write_compressed.c
examples/convert/: file-per-process-to-idx.c  hdf5-to-idx.c  pnetcdf-to-idx.c  raw-to-idx.c  template-converter.c
examples/field-data-access/: PIDX-read-by-field.c  PIDX-write-by-field.c
examples/file-variations/: PIDX-change-file-count.c
examples/grids/: idx_checkpoint_restart.cpp  idx_read.c  idx_write.c  idx_write_compressed.c  idx_write_multibuffer.c  idx_write_partitioned.c  raw_write.c
examples/parameter-study/: PIDX-parameter-study.c  PIDX-write-simulate.c  write_parallel.config
examples/particles/: particle_gradient_write.c  particle_non_uniform_write.c  particle_read.c  particle_write.c
pidx/: CMakeLists.txt  Generic_data_structs.h  PIDX.c  PIDX.h  PIDX_agg.c  PIDX_agg.h  PIDX_block_restructure.c  PIDX_block_restructure.h  PIDX_blocks.c  PIDX_blocks.h  PIDX_box_restructure.c  PIDX_box_restructure.h  PIDX_close.c  PIDX_comm.c  PIDX_comm.h  PIDX_compression.c  PIDX_compression.h  PIDX_data_layout.c  PIDX_data_layout.h  PIDX_data_structs.h  PIDX_data_types.c  PIDX_data_types.h  PIDX_debug.c  PIDX_define.h  PIDX_error_codes.c  PIDX_error_codes.h  PIDX_file_access_modes.c  PIDX_file_access_modes.h  PIDX_file_create.c  PIDX_file_handler.h  PIDX_file_name.c  PIDX_file_name.h  PIDX_file_open.c  PIDX_header_io.c  PIDX_header_io.h  PIDX_hz_encode.c  PIDX_hz_encode.h  PIDX_idx_data_structs.h  PIDX_idx_set_get.c  PIDX_inc.h  (+16 more)
pidx/comm/: CMakeLists.txt  PIDX_comm.c  PIDX_comm.c~  PIDX_comm.h
pidx/core/: CMakeLists.txt  PIDX_core.c
pidx/data_handle/: CMakeLists.txt  CMakeLists.txt~  PIDX_aggregation_buffer_structs.h  PIDX_blocks.c  PIDX_blocks.h  PIDX_comm_structs.h  PIDX_data_layout.c  PIDX_data_layout.h  PIDX_data_structs.h  PIDX_data_types.c  PIDX_data_types.c~  PIDX_data_types.h  PIDX_debug_structs.h  PIDX_hz_buffer_structs.h  PIDX_idx_blocks_structs.h  PIDX_idx_data_structs.h  PIDX_idx_file_structs.h  PIDX_memory_layout_data_structs.h  PIDX_memory_layout_data_structs.h~  PIDX_memory_layout_structs.h  PIDX_patch_structs.h  PIDX_restructured_grid_structs.h  PIDX_super_patch_structs.h  PIDX_timming_data_structs.h  PIDX_timming_structs.h  PIDX_variable_structs.h
pidx/io/: CMakeLists.txt  CMakeLists.txt~  PIDX_io.c  PIDX_io.h  PIDX_io.h~  agg_io.c  agg_io.h  bit_string.c  bit_string.h  blocks.c  blocks.h  global_partition_idx_io.c  global_partition_idx_io.h  headers.c  headers.h  hz_buffer.c  hz_buffer.h  idx_insitu.c  idx_insitu.h  idx_io.c  idx_io.h  initialize.c  initialize.h  io_setup.c  local_buffer.c  local_buffer.h  local_partition_idx_io.c  local_partition_idx_io.h  partition.c  partition.h  raw_io.c  restructure.c  restructure.h  timming.c  timming.h  wavelet_coefficient.c  wavelet_coefficient.h  wavelet_idx_rst.c  wavelet_idx_rst.h  wavelet_idx_stencil.c  (+9 more)
pidx/meta_data_cache/: CMakeLists.txt  PIDX_meta_data_cache.c  PIDX_meta_data_cache.h
pidx/metadata/: CMakeLists.txt  PIDX_metadata_cache.c  PIDX_metadata_cache.h  PIDX_metadata_parse.c  PIDX_metadata_parse_v6.c  PIDX_metadata_parse_v6_0.c  PIDX_metadata_parse_v6_1.c  PIDX_metadata_parse_v7.c
pidx/topology/: CMakeLists.txt  CMakeLists.txt~  PIDX_topology.c  PIDX_topology.c~  PIDX_topology.h
pidx/utils/: CMakeLists.txt  PIDX_buffer.c  PIDX_buffer.h  PIDX_error_codes.c  PIDX_error_codes.h  PIDX_file_access_modes.c  PIDX_file_access_modes.h  PIDX_file_name.c  PIDX_file_name.h  PIDX_point.c  PIDX_point.h  PIDX_utils.c  PIDX_utils.h  PIDX_windows_utils.h
processing/: CMakeLists.txt  global_idx_merge.c  merge.c
profile/: CMakeLists.txt  aggregation-benchmark.c  aggregation-verify-bgq.c  aggregation-verify.c  dump-header.c  fortran-reader.c  fortran-rst.c  fortran-to-idx.c  idx-compare-clubed-variables.c  idx-compare.c  idx-dump-header.c  idx-verify.c  k-benchmark-1.c  k-benchmark-2.c  parallel-test-read.c  pnetcdf-read-standard.c  restructured_rank_order.c  rst-phase.c  s3d-velocity-2idx.c  shared-memory-benchmark1.c  sparse-data-writer.c
test/: CMakeLists.txt  pidxtest.c  pidxtest.h  test-HDF5-reader.c  test-HDF5-writer.c  test-PIDX-converter.cpp  test-PIDX-converter2.cpp  test-PIDX-multi-idx-writer.c  test-PIDX-multi-idx-writer.cpp  test-PIDX-multi-patch.c  test-PIDX-multi-var-writer.c  test-PIDX-one-var-writer.c  test-PIDX-reader.c  test-PIDX-reader.cpp  test-PIDX-simple-writer.c  test-PIDX-writer.c  test-mpi-to-idx.cpp  test-serial-reader.c  test-serial-writer.c  testdefs.h
tools/: CMakeLists.txt  idx-compare.c  idx-dump-header.c  idx-minmax.c  idx-verify.c  idx_readblock.c  particle-verify.c
tools/convert/: file-per-process-to-idx.c  hdf5-to-idx.c  pnetcdf-to-idx.c  raw-to-idx.c
tools/test/: idx_utils.py  test.py  test_config.py
tutorial/: CMakeLists.txt
tutorial/1_PIDX_Basics_Dumps/: checkpoint.c  checkpoint_multi_buffer.c  checkpoint_multi_grid.c  checkpoint_simple.c  range_query.c  raw_to_idx.c  restart.c  restart_multi_buffer.c  (+1 more)
utility/: CMakeLists.txt  min_max.c
viewer2D/: CMakeLists.txt  PIDX_slice_viewer.c
(+334 files in other folders)
